kubernetes/templates/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zapgo-website
  namespace: zapgo-website
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - zapgo.co
    secretName: zapgo-website-tls
  rules:
  - host: zapgo.co
    http:
      paths:
      - path: /
        backend:
          serviceName: zapgo-website
          servicePort: 80
      - path: /*
        backend:
          serviceName: zapgo-website
          servicePort: 80
